fix: keeps spacing when gap cursor is between details

--- a/projects/editor/components/editor-socket/styles/details.less
+++ b/projects/editor/components/editor-socket/styles/details.less
@@ -119,7 +119,8 @@ div[data-type='details-content'] {
 }
 
 details + details,
-.t-details-wrapper + .t-details-wrapper {
+.t-details-wrapper + .t-details-wrapper,
+.t-details-wrapper + .ProseMirror-gapcursor + .t-details-wrapper {
     margin-block-start: 1rem;
 }
 
